# solvers

./: CMakeLists.txt  LICENSE
include/scip_cpp/: Common.h  Constraint.h  Exception.h  Model.h  Solution.h  Variable.h
src/: Common.h  Constraint.cpp  Core.h  Exception.cpp  Exception.h  Model.cpp  Solution.cpp  Variable.cpp
tests/: knapsack.cpp
tests/instances/knapsack/: instance1.txt  instance2.txt  instance3.txt  instance4.txt  instance5.txt
